--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "web-pack-practice",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/s-suresh-kumar/web-pack-practice.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/s-suresh-kumar/web-pack-practice/issues"
+  },
+  "homepage": "https://github.com/s-suresh-kumar/web-pack-practice#readme",
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
